--- a/eclipse/iis/build.xml
+++ b/eclipse/iis/build.xml
@@ -5,14 +5,10 @@
 <!-- === Distribution Staff Engineering             === -->
 <!-- === Southern California Edison                 === -->
 <!-- ================================================== -->
-
 <project basedir="." default="build" name="iis">
-
 	<property name="LIB.location" value="../common/lib"/>
-	
 	<!-- Specify the location of your workspace if it isn't
 		 located in the default location.				    -->	
-
 	<!-- ==================================== -->
 	<!-- set global properties for this build -->
 	<!-- ==================================== -->
@@ -23,24 +19,18 @@
 	<property name="native"  value="lib/native"/>
 	<property name="classpath"  value="classes"/>
 	<property name="docs" value="doc"/>
-
 	<!-- 
 	First thing is to add some tomcat stuff to your build.properties. It’s all self-explanatory (hopefully). 
 	-->
-
-	<!-- 
-	tomcat definitions 
-	-->
+	<!-- tomcat definitions -->
 	<property name="tomcat.server" value= "192.168.1.19"/>
 	<property name="tomcat.manager.url" value= "http://${tomcat.server}:8080/manager"/>
 	<property name="tomcat.username" value= "admin"/>
 	<property name="tomcat.password" value= "google2012"/>
 	<property name="app.name" value="iis"/>
-
 	<!-- 
 	Next, add the catalina ant tasks to your build.xml. The first thing to do is to create a classpath for your project which contains all the Tomcat JAR files inside common/lib and /bin, as well as the catalina-ant.jar which contains all the ant tasks.
 	-->
-
     <path id="project.classpath">
     	<fileset dir="../common/apache-tomcat-7.0.33/lib">
             <include name="*.jar" />
@@ -52,16 +42,10 @@
         	<include name="*.jar" />
         </fileset>
    	</path>
-	
-	
-	<!--Once you have set up the classpath, you can add the task: 
-	-->
-
+	<!--Once you have set up the classpath, you can add the task: -->
 	<taskdef resource="org/apache/catalina/ant/catalina.tasks" classpathref="project.classpath" />
-
 	<!-- Finally, you need to create the build targets to control ant. You can copy and paste this into your build.xml, although you will have to change the ‘war’ property to match the one from your servlet:
 	-->
-
    <target name="deploy" depends="build-war" description="Install application in Tomcat">
         <deploy url="${tomcat.manager.url}"
             username="${tomcat.username}"
@@ -69,50 +53,42 @@
             path="/${app.name}"
             war="${app.name}.war" />
     </target>
- 
     <target name="remove" description="Remove application from Tomcat">
         <undeploy url="${tomcat.manager.url}"
             username="${tomcat.username}"
             password="${tomcat.password}"
             path="/${app.name}"/>
     </target>
- 
     <target name="reload" description="Reload application in Tomcat">
         <reload url="${tomcat.manager.url}"
             username="${tomcat.username}"
             password="${tomcat.password}"
             path="/${app.name}"/>
     </target>
- 
     <target name="start" description="Start Tomcat application">
         <start url="${tomcat.manager.url}"
             username="${tomcat.username}"
             password="${tomcat.password}"
             path="/${app.name}"/>
     </target>
- 
     <target name="stop" description="Stop Tomcat application">
         <stop url="${tomcat.manager.url}"
             username="${tomcat.username}"
             password="${tomcat.password}"
             path="/${app.name}"/>
     </target>
- 
     <target name="list" description="List Tomcat applications">
         <list url="${tomcat.manager.url}"
             username="${tomcat.username}"
             password="${tomcat.password}"/>
     </target>
-
 	<!-- I also added a task to redeploy a servlet as it saved me an extra click each time I change my build:
 	-->
-
     <target name="redeploy" description="Redeploy application">
     	<antcall target="remove" />
     	<antcall target="list" />
         <antcall target="deploy" />
     </target>
-	
     <!-- ==================================== -->
     <!-- Clean-up the build and dist dir.     -->		
     <!-- ==================================== -->	
@@ -125,54 +101,28 @@
 		</delete>
 		<!-delete file="tomcat/common/lib/JavaDNA.jar"/-->
     </target>
-	
 	<!-- ==================================== -->
 	<!--        Build the source code         -->
 	<!-- ==================================== -->	
 	<target name="build" description="Compiles the classes">
         <echo message="${ant.project.name}: ${ant.file}"/>
-		
 		<mkdir dir="webapps/${app.name}/WEB-INF/classes"/>
-        
 		<!-- Compile the source files into the buid directory -->
-		<javac destdir="webapps/${app.name}/WEB-INF/classes" includes="com/digitald4/common/servlet/*" target="1.6" source="1.6" optimize="yes">
+		<javac destdir="webapps/${app.name}/WEB-INF/classes" 
+				includes="com/digitald4/iis/servlet/*,com/digitald4/common/servlet/*,com/digitald4/common/jpa/ESPEntityManagerFactory.java" 
+				target="1.6" source="1.6" optimize="yes">
 			<src path="../common/src" />
 			<src path="src" />
             <classpath refid="project.classpath"/>						
         </javac>
-		
 		<tstamp>
 			<format property="BUILDTIME" pattern="yyyy-MM-dd HH:mm" />
 		</tstamp>
-		
     </target>
-		
-	
 	<target name="build-war" depends="build" description="Builds the WAR">		
-		<copy todir="webapps/${app.name}/WEB-INF/lib">
-			<fileset file="../esp/lib/jdom.jar"/>
-		</copy>
-		
-		<copy todir="webapps/${app.name}/WEB-INF/classes/conf" file="../esp/src/conf/esp.properties" />
-		
-		
 		<!-- Create the WAR -->
 		<war warfile="${app.name}.war" basedir="webapps/${app.name}"/>
-		
 		<!-- Clean, so that commit is not so ugly -->
 		<antcall target="clean" />
-		
 	</target>
-	
-	<target name="psp2xml" description="Builds the PSP 2 Settings Container">		
-		<!-- Create the WAR -->
-		<jar jarfile="psp2xml.war" basedir="webapps/psp2xml"/>
-		
-		<deploy url="${tomcat.manager.url}"
-            username="${tomcat.username}"
-            password="${tomcat.password}"
-            path="/psp2xml"
-            war="psp2xml.war" />
-	</target>
-		
 </project>
