--- a/eclipse/iis/webapps/iis/WEB-INF/web.xml
+++ b/eclipse/iis/webapps/iis/WEB-INF/web.xml
@@ -9,15 +9,15 @@
 	
 	<context-param>
 		<param-name>company</param-name>
-		<param-value>Furniture 4 Me</param-value>"
+		<param-value>Innovative Infusion Solutions</param-value>"
 	</context-param>
 	<context-param>
 		<param-name>website</param-name>
-		<param-value>www.furniture4me.com</param-value>"
+		<param-value>www.innovativeinfusionsolutions.com</param-value>"
 	</context-param>
 	<context-param>
 		<param-name>dburl</param-name>
-		<param-value>jdbc:mysql://localhost:3306/furniture4me2</param-value>"
+		<param-value>jdbc:mysql://localhost:3306/iis</param-value>"
 	</context-param>
 	<context-param>
 		<param-name>dbuser</param-name>
