--- a/common/.classpath
+++ b/common/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-dbcp-1.4.jar"/>
 	<classpathentry kind="lib" path="lib/commons-pool-1.6.jar"/>
+	<classpathentry kind="lib" path="lib/emailer.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
