--- a/iis/.classpath
+++ b/iis/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/common"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="webapps/iis/WEB-INF/lib/javax.persistence_2.0.3.jar"/>
+	<classpathentry kind="lib" path="webapps/iis/WEB-INF/lib/emailer.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
