--- a/iis/webapps/iis/WEB-INF/web.xml
+++ b/iis/webapps/iis/WEB-INF/web.xml
@@ -82,7 +82,7 @@
 	
 	<servlet>
       <servlet-name>home</servlet-name>
-      <servlet-class>com.digitald4.pm.servlet.HomeServlet</servlet-class>
+      <servlet-class>com.digitald4.common.servlet.HomeServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>home</servlet-name>
@@ -91,7 +91,7 @@
 
 	<servlet>
       <servlet-name>login</servlet-name>
-      <servlet-class>com.digitald4.pm.servlet.LoginServlet</servlet-class>
+      <servlet-class>com.digitald4.common.servlet.LoginServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>login</servlet-name>
@@ -100,7 +100,7 @@
 
 	<servlet>	
       <servlet-name>logout</servlet-name>
-      <servlet-class>com.digitald4.pm.servlet.LogoutServlet</servlet-class>
+      <servlet-class>com.digitald4.common.servlet.LogoutServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>logout</servlet-name>
@@ -109,7 +109,7 @@
     
 	<servlet>	
       <servlet-name>account</servlet-name>
-      <servlet-class>com.digitald4.pm.servlet.AccountServlet</servlet-class>
+      <servlet-class>com.digitald4.common.servlet.AccountServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>account</servlet-name>
@@ -118,7 +118,7 @@
     
 	<servlet>
       <servlet-name>admin</servlet-name>
-      <servlet-class>com.digitald4.pm.servlet.AdminServlet</servlet-class>
+      <servlet-class>com.digitald4.common.servlet.AdminServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>admin</servlet-name>
@@ -127,7 +127,7 @@
     
 	<servlet>
       <servlet-name>adminSearch</servlet-name>
-      <servlet-class>com.digitald4.pm.servlet.AdminSearchServlet</servlet-class>
+      <servlet-class>com.digitald4.common.servlet.AdminSearchServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>adminSearch</servlet-name>
@@ -136,7 +136,7 @@
     
 	<servlet>
       <servlet-name>upload</servlet-name>
-      <servlet-class>com.digitald4.pm.servlet.UploadServlet</servlet-class>
+      <servlet-class>com.digitald4.common.servlet.UploadServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>upload</servlet-name>
@@ -145,7 +145,7 @@
     
     <servlet>
           <servlet-name>getAgentInfo</servlet-name>
-          <servlet-class>com.digitald4.pm.servlet.AgentInfoAjax</servlet-class>
+          <servlet-class>com.digitald4.common.servlet.AgentInfoAjax</servlet-class>
         </servlet>
         <servlet-mapping>
             <servlet-name>getAgentInfo</servlet-name>
@@ -154,7 +154,7 @@
     
     <servlet>
       <servlet-name>news</servlet-name>
-      <servlet-class>com.digitald4.pm.servlet.NewsServlet</servlet-class>
+      <servlet-class>com.digitald4.common.servlet.NewsServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>news</servlet-name>
@@ -163,7 +163,7 @@
 
     <servlet>
       <servlet-name>faq</servlet-name>
-      <servlet-class>com.digitald4.pm.servlet.FaqServlet</servlet-class>
+      <servlet-class>com.digitald4.common.servlet.FaqServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>faq</servlet-name>
@@ -172,7 +172,7 @@
     
     <servlet>
       <servlet-name>link</servlet-name>
-      <servlet-class>com.digitald4.pm.servlet.LinkServlet</servlet-class>
+      <servlet-class>com.digitald4.common.servlet.LinkServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>link</servlet-name>
@@ -181,7 +181,7 @@
     
     <servlet>
       <servlet-name>search</servlet-name>
-      <servlet-class>com.digitald4.pm.servlet.SearchServlet</servlet-class>
+      <servlet-class>com.digitald4.common.servlet.SearchServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>search</servlet-name>
@@ -190,7 +190,7 @@
     
     <servlet>
       <servlet-name>contact</servlet-name>
-      <servlet-class>com.digitald4.pm.servlet.ContactServlet</servlet-class>
+      <servlet-class>com.digitald4.common.servlet.ContactServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>contact</servlet-name>
@@ -199,7 +199,7 @@
 
     <servlet>
       <servlet-name>addclient</servlet-name>
-      <servlet-class>com.digitald4.pm.servlet.AddClientServlet</servlet-class>
+      <servlet-class>com.digitald4.common.servlet.AddClientServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>addclient</servlet-name>
@@ -208,7 +208,7 @@
     
     <servlet>
       <servlet-name>iframe</servlet-name>
-      <servlet-class>com.digitald4.pm.servlet.IframeServlet</servlet-class>
+      <servlet-class>com.digitald4.common.servlet.IframeServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>iframe</servlet-name>
