--- a/iis/.classpath
+++ b/iis/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="webapps/iis/WEB-INF/lib/javax.persistence_2.0.3.jar"/>
 	<classpathentry kind="lib" path="webapps/iis/WEB-INF/lib/emailer.jar"/>
+	<classpathentry kind="lib" path="webapps/iis/WEB-INF/lib/mysql-connector-java-5.1.22-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
