--- a/iis/.classpath
+++ b/iis/.classpath
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/common"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="webapps/iis/WEB-INF/lib/javax.persistence_2.0.3.jar"/>
 	<classpathentry kind="lib" path="webapps/iis/WEB-INF/lib/emailer.jar"/>
 	<classpathentry kind="lib" path="webapps/iis/WEB-INF/lib/mysql-connector-java-5.1.22-bin.jar"/>
+	<classpathentry kind="lib" path="/common/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="/common/lib/jsp-api.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
