--- a/iis/build.xml
+++ b/iis/build.xml
@@ -40,6 +40,7 @@
         </fileset-->
     	<fileset dir="../common/lib">
     		<include name="servlet-api.jar" />
+    		<include name="jsp-api.jar" />
     	</fileset>
         <fileset dir="webapps/${app.name}/WEB-INF/lib">
         	<include name="*.jar" />
@@ -112,7 +113,8 @@
 		<mkdir dir="webapps/${app.name}/WEB-INF/classes"/>
 		<!-- Compile the source files into the buid directory -->
 		<javac destdir="webapps/${app.name}/WEB-INF/classes" 
-				includes="com/digitald4/iis/servlet/*,com/digitald4/common/servlet/*,com/digitald4/common/jpa/DD4EntityManagerFactory.java" 
+				includes="com/digitald4/iis/servlet/*,com/digitald4/common/servlet/*,com/digitald4/iis/tld/*
+					com/digitald4/common/jpa/DD4EntityManagerFactory.java" 
 				target="1.6" source="1.6" optimize="yes">
 			<src path="../common/src" />
 			<src path="src" />
