--- a/iis/.classpath
+++ b/iis/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="webapps/iis/WEB-INF/lib/mysql-connector-java-5.1.22-bin.jar"/>
 	<classpathentry kind="lib" path="/common/lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="/common/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="/common/lib/joda-time-1.6.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
