Clean up and Assessment data work

--- a/iis/webapps/iis/WEB-INF/web.xml
+++ b/iis/webapps/iis/WEB-INF/web.xml
@@ -211,7 +211,25 @@
         <url-pattern>/intake</url-pattern>
     </servlet-mapping>
     
-        <servlet>
+    <servlet>
+      <servlet-name>patients</servlet-name>
+      <servlet-class>com.digitald4.iis.servlet.PatientsServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>patients</servlet-name>
+        <url-pattern>/patients</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+      <servlet-name>pending</servlet-name>
+      <servlet-class>com.digitald4.iis.servlet.PendingAssServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>pending</servlet-name>
+        <url-pattern>/pending</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
       <servlet-name>patientAssessment</servlet-name>
       <servlet-class>com.digitald4.iis.servlet.PatientAssessmentServlet</servlet-class>
     </servlet>
