--- a/iis/build.xml
+++ b/iis/build.xml
@@ -113,7 +113,7 @@
 		<mkdir dir="webapps/${app.name}/WEB-INF/classes"/>
 		<!-- Compile the source files into the buid directory -->
 		<javac destdir="webapps/${app.name}/WEB-INF/classes" 
-				includes="com/digitald4/iis/servlet/*,com/digitald4/common/servlet/*,com/digitald4/common/tld/*
+				includes="com/digitald4/iis/servlet/*,com/digitald4/common/servlet/*,com/digitald4/common/tld/*,com/digitald4/iis/tld/*
 					com/digitald4/common/jpa/DD4EntityManagerFactory.java" 
 				target="1.6" source="1.6" optimize="yes">
 			<src path="../common/src" />
