Calendar most of the way there

--- a/iis/webapps/iis/WEB-INF/web.xml
+++ b/iis/webapps/iis/WEB-INF/web.xml
@@ -262,7 +262,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>appointment</servlet-name>
-        <url-pattern>/new_app</url-pattern>
+        <url-pattern>/appointment</url-pattern>
     </servlet-mapping>
     
     <servlet>
