--- a/iis/webapps/iis/WEB-INF/web.xml
+++ b/iis/webapps/iis/WEB-INF/web.xml
@@ -311,6 +311,24 @@
     </servlet-mapping>
     
     <servlet>
+      <servlet-name>users</servlet-name>
+      <servlet-class>com.digitald4.common.servlet.UsersServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>users</servlet-name>
+        <url-pattern>/users</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+      <servlet-name>user</servlet-name>
+      <servlet-class>com.digitald4.common.servlet.UserServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>user</servlet-name>
+        <url-pattern>/user</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
       <servlet-name>assessment</servlet-name>
       <servlet-class>com.digitald4.iis.servlet.AssessmentServlet</servlet-class>
     </servlet>
