--- a/iis/.classpath
+++ b/iis/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="/common/tomcat-7/lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="/common/lib/joda-time-2.1.jar" sourcepath="/common/lib/sources/joda-time-2.1-sources.jar"/>
 	<classpathentry kind="lib" path="/common/lib/javax.persistence_2.0.3.jar"/>
+	<classpathentry kind="lib" path="/common/lib/itext-2.1.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
