--- a/iis/build.xml
+++ b/iis/build.xml
@@ -119,6 +119,7 @@
 				<include name="commons-pool*.jar" />
 				<include name="mysql-connector*.jar" />
 				<include name="javax.servlet.jsp.jstl*.jar" />
+				<include name="itext-2.1.7.jar" />
 			</fileset>
 		</copy>
 		<concat destfile="webapps/${app.name}/WEB-INF/web.xml">
