--- a/iis/src/conf/web.xml
+++ b/iis/src/conf/web.xml
@@ -261,6 +261,15 @@
     </servlet-mapping>
     
     <servlet>
+      <servlet-name>reports</servlet-name>
+      <servlet-class>com.digitald4.iis.servlet.ReportsServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>reports</servlet-name>
+        <url-pattern>/reports</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
       <servlet-name>pdfreport</servlet-name>
       <servlet-class>com.digitald4.iis.servlet.PDFReportServlet</servlet-class>
     </servlet>
