--- a/iis/webapps/iis/WEB-INF/web.xml
+++ b/iis/webapps/iis/WEB-INF/web.xml
@@ -261,6 +261,15 @@
     </servlet-mapping>
     
     <servlet>
+      <servlet-name>reports</servlet-name>
+      <servlet-class>com.digitald4.iis.servlet.ReportsServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>reports</servlet-name>
+        <url-pattern>/reports</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
       <servlet-name>pdfreport</servlet-name>
       <servlet-class>com.digitald4.iis.servlet.PDFReportServlet</servlet-class>
     </servlet>
@@ -271,6 +280,11 @@
 
 	<context-param>
 		<param-name>dburl</param-name>
-		<param-value>jdbc:mysql://198.38.82.101/iisosnet_main?autoReconnect=true</param-value>
+		<param-value>jdbc:mysql://localhost/iisosnet_main?autoReconnect=true</param-value>
+	</context-param>
+
+	<context-param>
+		<param-name>auto_login_id</param-name>
+		<param-value>1</param-value>
 	</context-param>
 </web-app>
