--- a/iis/webapps/iis/WEB-INF/web.xml
+++ b/iis/webapps/iis/WEB-INF/web.xml
@@ -256,6 +256,15 @@
     </servlet-mapping>
     
     <servlet>
+      <servlet-name>useradd</servlet-name>
+      <servlet-class>com.digitald4.common.servlet.UserAddServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>useradd</servlet-name>
+        <url-pattern>/useradd</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
       <servlet-name>users</servlet-name>
       <servlet-class>com.digitald4.common.servlet.UsersServlet</servlet-class>
     </servlet>
@@ -280,6 +289,10 @@
     <servlet-mapping>
         <servlet-name>user</servlet-name>
         <url-pattern>/user</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>user</servlet-name>
+        <url-pattern>/myprofile</url-pattern>
     </servlet-mapping>
     
     <servlet>
