--- a/iis/webapps/iis/WEB-INF/web.xml
+++ b/iis/webapps/iis/WEB-INF/web.xml
@@ -59,24 +59,6 @@
 		<param-name>emailpass</param-name>
 		<param-value>expressidtags347</param-value>
 	</context-param>
-
-	<servlet>
-      <servlet-name>login</servlet-name>
-      <servlet-class>com.digitald4.common.servlet.LoginServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>login</servlet-name>
-        <url-pattern>/login</url-pattern>
-    </servlet-mapping>
-
-	<servlet>	
-      <servlet-name>logout</servlet-name>
-      <servlet-class>com.digitald4.common.servlet.LogoutServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>logout</servlet-name>
-        <url-pattern>/logout</url-pattern>
-    </servlet-mapping>
     
     <servlet>
       <servlet-name>nurseAdd</servlet-name>
@@ -227,24 +209,6 @@
     </servlet-mapping>
     
     <servlet>
-      <servlet-name>useradd</servlet-name>
-      <servlet-class>com.digitald4.common.servlet.UserAddServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>useradd</servlet-name>
-        <url-pattern>/useradd</url-pattern>
-    </servlet-mapping>
-    
-    <servlet>
-      <servlet-name>users</servlet-name>
-      <servlet-class>com.digitald4.common.servlet.UsersServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>users</servlet-name>
-        <url-pattern>/users</url-pattern>
-    </servlet-mapping>
-    
-    <servlet>
       <servlet-name>penpay</servlet-name>
       <servlet-class>com.digitald4.iis.servlet.PendingPaymentServlet</servlet-class>
     </servlet>
@@ -313,6 +277,11 @@
 
 	<context-param>
 		<param-name>dburl</param-name>
-		<param-value>jdbc:mysql://198.38.82.101/iisosnet_main?autoReconnect=true</param-value>
+		<param-value>jdbc:mysql://localhost/iisosnet_main?autoReconnect=true</param-value>
+	</context-param>
+
+	<context-param>
+		<param-name>auto_login_id</param-name>
+		<param-value>1</param-value>
 	</context-param>
 </web-app>
