--- a/iis/webapps/iis/WEB-INF/web.xml
+++ b/iis/webapps/iis/WEB-INF/web.xml
@@ -277,6 +277,11 @@
 
 	<context-param>
 		<param-name>dburl</param-name>
-		<param-value>jdbc:mysql://198.38.82.101/iisosnet_main?autoReconnect=true</param-value>
+		<param-value>jdbc:mysql://localhost/iisosnet_main?autoReconnect=true</param-value>
+	</context-param>
+
+	<context-param>
+		<param-name>auto_login_id</param-name>
+		<param-value>1</param-value>
 	</context-param>
 </web-app>
