--- a/iis/webapps/iis/WEB-INF/web.xml
+++ b/iis/webapps/iis/WEB-INF/web.xml
@@ -52,7 +52,7 @@
 	
 	<context-param>
 		<param-name>emailuser</param-name>
-		<param-value>no-reply@iisos.net</param-value>
+		<param-value>noreply@iisos.net</param-value>
 	</context-param>
 	
 	<context-param>
@@ -276,17 +276,12 @@
     </servlet-mapping>
 
 	<context-param>
-		<param-name>dburl</param-name>
-		<param-value>jdbc:mysql://localhost/iisosnet_main?autoReconnect=true</param-value>
-	</context-param>
-
-	<context-param>
-		<param-name>auto_login_id</param-name>
-		<param-value>1</param-value>
-	</context-param>
-
-	<context-param>
 		<param-name>enable_confirmation_request</param-name>
 		<param-value>true</param-value>
+	</context-param>
+
+	<context-param>
+		<param-name>dburl</param-name>
+		<param-value>jdbc:mysql://198.38.82.101/iisosnet_main?autoReconnect=true</param-value>
 	</context-param>
 </web-app>
