Work toward version 2.0

--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src-gen"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/common"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
@@ -11,5 +12,6 @@
 	<classpathentry kind="lib" path="/common/lib/javax.persistence_2.0.3.jar"/>
 	<classpathentry kind="lib" path="/common/lib/itextpdf-5.5.1.jar" sourcepath="/common/lib/itext-5.5.1/itextpdf-5.5.1-sources.jar"/>
 	<classpathentry kind="lib" path="/common/lib/javax.mail.jar"/>
+	<classpathentry kind="lib" path="/common/lib/protobuf-java-3.0.0-beta-2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
