--- a/src/conf/web.xml
+++ b/src/conf/web.xml
@@ -22,12 +22,12 @@
 	
 	<context-param>
 		<param-name>company</param-name>
-		<param-value>Innovative Infusion Solutions</param-value>
+		<param-value>I.P. 360</param-value>
 	</context-param>
 	
 	<context-param>
 		<param-name>website</param-name>
-		<param-value>www.InnovativeInfusionSolutions.com</param-value>
+		<param-value>www.ip360app.com</param-value>
 	</context-param>
 	
 	<context-param>
