--- a/webapps/iis/WEB-INF/web.xml
+++ b/webapps/iis/WEB-INF/web.xml
@@ -17,7 +17,7 @@
      </session-config>
 	
 	<context-param>
-		<param-name>company</param-name>
+		<param-name>company_name</param-name>
 		<param-value>I.P. 360</param-value>
 	</context-param>
 	
@@ -59,7 +59,7 @@
 	<context-param>
 		<param-name>enable_confirmation_request</param-name>
 		<param-value>true</param-value>
-	</context-param>
+    </context-param>
 
 	<context-param>
 		<param-name>dburl</param-name>
