--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
     <dependency>
       <groupId>com.google.protobuf</groupId>
       <artifactId>protobuf-java</artifactId>
-      <version>3.3.0-custom</version>
+      <version>3.6.1</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
