--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,9 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.compiler.source>1.8</maven.compiler.source>
 
-    <appengine.app.version>1</appengine.app.version>
-    <appengine.target.version>1.9.54</appengine.target.version>
     <appengine-maven-plugin-version>1.3.1</appengine-maven-plugin-version>
+    <endpoints-framework-maven-plugin>2.1.0</endpoints-framework-maven-plugin>
+    <endpoints.project.id>ip360-179401</endpoints.project.id>
   </properties>
 
   <dependencies>
@@ -44,16 +44,6 @@
       <groupId>com.digitald4</groupId>
       <artifactId>dd4-common</artifactId>
       <version>1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.appengine</groupId>
-      <artifactId>appengine-api-1.0-sdk</artifactId>
-      <version>${appengine.target.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.protobuf</groupId>
-      <artifactId>protobuf-java</artifactId>
-      <version>3.6.1</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -70,21 +60,15 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>com.google.truth</groupId>
+      <artifactId>truth</artifactId>
+      <version>1.1.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
       <version>1.10.19</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.google.appengine</groupId>
-      <artifactId>appengine-testing</artifactId>
-      <version>${appengine.target.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.google.appengine</groupId>
-      <artifactId>appengine-api-stubs</artifactId>
-      <version>${appengine.target.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -147,6 +131,15 @@
         <groupId>com.google.cloud.tools</groupId>
         <artifactId>appengine-maven-plugin</artifactId>
         <version>${appengine-maven-plugin-version}</version>
+      </plugin>
+      <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>endpoints-framework-maven-plugin</artifactId>
+        <version>${endpoints-framework-maven-plugin}</version>
+        <configuration>
+          <!-- plugin configuration -->
+          <hostname>${endpoints.project.id}.appspot.com</hostname>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>net.alchim31.maven</groupId>
