--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,26 +4,47 @@
     PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
     "http://java.sun.com/dtd/web-app_2_3.dtd">
 
-<web-app>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+         http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+		 version="3.1">
 	<display-name>Innovative Infusion Solutions</display-name>
 	<description>Innovative Infusion Solutions, LLC</description>
 
-  <servlet>
-    <servlet-name>API Service Servlet</servlet-name>
-    <servlet-class>com.digitald4.iis.server.ApiServiceServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>API Service Servlet</servlet-name>
-    <url-pattern>/api/*</url-pattern>
-  </servlet-mapping>
+	<!-- Wrap the backend with Endpoints Frameworks v2. -->
+	<!-- Route API method requests to the backend using Guice. -->
+	<!-- [START guice_configuration] -->
+	<filter>
+		<filter-name>guiceFilter</filter-name>
+		<filter-class>com.google.inject.servlet.GuiceFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>guiceFilter</filter-name>
+		<url-pattern>/_api/*</url-pattern>
+	</filter-mapping>
+
+	<listener>
+		<listener-class>com.digitald4.iis.server.GuiceListener</listener-class>
+	</listener>
+	<!-- [END guice_configuration] -->
+
+	<servlet>
+		<servlet-name>API Service Servlet</servlet-name>
+		<servlet-class>com.digitald4.iis.server.ApiServiceServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>API Service Servlet</servlet-name>
+		<url-pattern>/api/*</url-pattern>
+	</servlet-mapping>
 	
 	<welcome-file-list>
-    <welcome-file>index.html</welcome-file>
+		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 	
 	<session-config>
 		<session-timeout>30</session-timeout>
-  </session-config>
+	</session-config>
 	
 	<context-param>
 		<param-name>company_name</param-name>
